Tests/resources/errors/indexOutOfRange-listItem.poc
attribute name: Text;
attribute text: Text; 

enumerated category Error(name,text) {
	DIVIDE_BY_ZERO ( text = "Divide by zero!" ); 
	INDEX_OUT_OF_RANGE (text= "Index out of range!");
	NULL_REFERENCE (text = "Null reference!" ); 
}

native method print ( Text value ) {
	Java: System.out.print(value);
	C#: System.Console.Write(value);
	Python2: print(objects=value,end="")
	Python3: print(objects=value,end="")
	JavaScript: process.stdout.write(value);
}

method main ( Text<:> options ) {
	try(error) {
		l = [1,2,3];
		print ("" + l[10]);
	} catch ( INDEX_OUT_OF_RANGE ) {
		print (error.text);
	}
}
